# Cpp_VoxelWorldTraining

./: CMakeLists.txt  SFMLOpenglTemplae.kdev4
data/Blocks/: Air.block  Grass.block
data/Shaders/: Simple_Fragment.glsl  Simple_Vertex.glsl
include/: Application.h  Camera.h  Display.h  Entity.h  GLMCommon.h  Model.h  Quad.h
include/Math/: Matrix.h
include/Renderer/: Master.h  SimpleRenderer.h
include/Shader/: Loader.h  Program.h  SimpleShader.h
include/State/: Base.h  Playing.h
include/Texture/: Atlas.h  Basic.h
include/Utils/: Random.h
include/World/Block/: BlockData.h  BlockDatabase.h  BlockID.h
include/World/Block/BlockTextures/: BlockTexture.h
include/World/Block/BlockTypes/: Air.h  BlockTypes.h  Grass.h
sources/: Application.cpp  Camera.cpp  Display.cpp  Model.cpp  Quad.cpp  main.cpp
sources/Math/: Matrix.cpp
sources/Renderer/: Master.cpp  SimpleRenderer.cpp
sources/Shader/: Loader.cpp  Program.cpp  SimpleShader.cpp
sources/State/: Base.cpp  Playing.cpp
sources/Texture/: Atlas.cpp  Basic.cpp
sources/Utils/: Random.cpp
sources/World/Block/: BlockData.cpp  BlockDatabase.cpp
sources/World/Block/BlockTypes/: Air.cpp  BlockTypes.cpp  Grass.cpp
sources/World/Block/BockTextures/: BlockTexture.cpp
